# BrainDump

./: .gitignore  README.md  combining-git-repos.md  command_line.md
System Design/: 1.system-design-study-guide.md  10.traffic-estimation-study-guide.md  11.client-edge-cdn-real-world-example-study-guide.md  12.http-sse-websockets-study-guide.md  13.pagination-study-guide.md  14.db-indexing-study-guide.md  15.sharding-partitioning-study-guide.md  16.blob-storage-file-upload-study-guide.md  2.1.cap-theorem-study-guide.md  2.2.pacelc-theorem-study-guide.md  4.caching-patterns-study-guide.md  5.rdbms-nosql-acid-study-guide.md  6.concurrency-study-guide.md  7.event-driven-architecture-study-guide.md  8.kafka-vs-messaging-study-guide.md  8.stability-patterns-study-guide.md  9.graphql-study-guide.md  Availability-study-guide.md  CONTENT-UPDATES-ROADMAP.md  cap-theorem-study-guide.md  consistent-hashing-visual.html  mkdocs.yml  pyproject.toml  system-design-study-guide.md
System Design/archive/: Availability-study-guide.md  cap-theorem.md
System Design/docs/: index.md
System Design/docs/assets/: db-choice-interview-scenarios.html  wide-column-visual.html
System Design/docs/caching-and-scale/: caching-patterns.md  traffic-estimation.md
System Design/docs/databases/: blob-storage.md  indexing.md  sql-vs-nosql-acid.md
System Design/docs/distributed-systems/: consistency-cap-pacelc.md
System Design/docs/patterns/: contention.md  (+5 more)
interview-prep/: .gitignore  insert-interval-viz.html  mkdocs.yml  pyproject.toml
interview-prep/docs/: fast-track-study-plan.md  index.md
(+125 files in other folders)
